made better file name

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css.css"> 
     </head>
   <body>
-	  STUFF
+	  <div class="container">
+		  stuff
+	  </div>
   </body>
 </html>
